Bug 351765 - Dolphin git plugin displays its menu wrapped into <application>
Summary: Dolphin git plugin displays its menu wrapped into <application>
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: git (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Dörner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-25 19:20 UTC by SeeLook
Modified: 2015-09-06 15:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SeeLook 2015-08-25 19:20:57 UTC
Context menu of Dolphin in any git repository displays any action of git wrapped by:
<application></application>
like:
<application>add</application>
<application>pull</application>

Reproducible: Always

Steps to Reproduce:
Just open context menu in git repo



I had the same problem with mercurial plugin during porting it to KF5.
The solution was to change:
m_addAction->setText(i18nc("@action:inmenu", "<application>Git</application> Add"));
into
m_addAction->setText(xi18nd("@action:inmenu", "<application>Git</application> Add"));

In spare time I will send a patch :-)
Comment 1 thepouar 2015-09-01 22:37:47 UTC
is "Git Add" broken too or is it just me?
Comment 2 SeeLook 2015-09-02 09:04:25 UTC
Yes, I have it broken too but a reason is rather different so it might be another bug report.
Comment 3 SeeLook 2015-09-04 23:24:59 UTC
I put fixes for both bugs to review:
https://git.reviewboard.kde.org/r/125052/
https://git.reviewboard.kde.org/r/125054/
Comment 4 Emmanuel Pescosta 2015-09-06 15:13:41 UTC
Git commit 3bb5917d21b1de8a84fc34a1cdfc23e9a20c94a2 by Emmanuel Pescosta, on behalf of Tomasz Bojczuk.
Committed on 06/09/2015 at 15:09.
Pushed by emmanuelp into branch 'Applications/15.08'.

Fixed Dolphin context menu entries inside git repos

All occurences of i18nc were changed in xi18nd to properly pharse <application> tags

REVIEW: 125052
FIXED-IN: 15.08.1

M  +29   -29   git/fileviewgitplugin.cpp

http://commits.kde.org/dolphin-plugins/3bb5917d21b1de8a84fc34a1cdfc23e9a20c94a2