Fixed Dolphin context menu entries inside git repos

All occurences of i18nc were changed in xi18nd to properly pharse <application> tags

REVIEW: 125052
FIXED-IN: 15.08.1
BUG: 351765